# argmin

./: Cargo.toml  README.md
examples/: backtracking.rs  bfgs.rs  brent.rs  checkpoint_3.rs  conjugategradient.rs  dfp.rs  gaussnewton.rs  gaussnewton_linesearch.rs  hagerzhang.rs  landweber.rs  lbfgs.rs  morethuente.rs  neldermead.rs  newton.rs  newton_cg.rs  nonlinear_cg.rs  noserbrent.rs  particleswarm.rs  simulatedannealing.rs  sr1.rs  sr1_trustregion.rs  steepestdescent.rs  trustregion_nd.rs  writers.rs
fake_serialize_macro/: Cargo.toml
fake_serialize_macro/src/: lib.rs
src/: lib.rs  tests.rs
src/solver/brent/: mod.rs
src/solver/conjugategradient/: beta.rs  cg.rs  nonlinear_cg.rs
src/solver/gaussnewton/: gaussnewton_linesearch.rs  gaussnewton_method.rs
src/solver/gradientdescent/: steepestdescent.rs
src/solver/landweber/: mod.rs
src/solver/linesearch/: backtracking.rs  condition.rs  hagerzhang.rs  morethuente.rs
src/solver/neldermead/: mod.rs
src/solver/newton/: newton_cg.rs  newton_method.rs
src/solver/particleswarm/: mod.rs
src/solver/quasinewton/: bfgs.rs  dfp.rs  lbfgs.rs  sr1.rs  sr1_trustregion.rs
src/solver/simulatedannealing/: mod.rs
src/solver/trustregion/: cauchypoint.rs  dogleg.rs  steihaug.rs  trustregion_method.rs
