[package]
name = "argmin"
version = "0.2.5"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Mathematical optimization in pure Rust"
documentation = "https://docs.rs/argmin/latest/argmin/"
homepage = "http://argmin-rs.org"
repository = "https://github.com/argmin-rs/argmin"
readme = "README.md"
keywords = ["optimization", "math", "science"]
categories = ["science"]
exclude = [
	".travis.yml",
	"push_docs",
]

[dependencies]
argmin_core = { path = "../argmin-core"}
# argmin_testfunctions = { path = "../argmin-testfunctions" }
# argmin_core = { git = "https://github.com/xemwebe/argmin-core.git", branch = "master"}
argmin_testfunctions = { git = "https://github.com/argmin-rs/argmin-testfunctions.git", branch = "master"}
# argmin_core = "0.2.5"
# argmin_testfunctions = "0.1.1"
rand = { version = "0.7.2"}
rand_xorshift = { version = "0.2.0" }
serde = { version = "1.0", features = ["rc"], optional=true }
approx = "0.3.2"
fake_serialize_macro = { path = "./fake_serialize_macro" }

[dev-dependencies]
ndarray = { version = "0.13", features = ["serde-1"] }
ndarray-linalg = { version = "0.12", features = ["openblas"] }
gnuplot = "0.0.32"
paste = "0.1.5"

[features]
default = []
serde1 = ["serde", "argmin_core/serde1", "ndarray/serde-1", "rand_xorshift/serde1", "fake_serialize_macro/serde1"]
ctrlc = ["argmin_core/ctrlc"]
ndarrayl = ["argmin_core/ndarrayl"]
visualizer = ["argmin_core/visualizer"]

[badges]
travis-ci = { repository = "argmin-rs/argmin", branch = "master" }
maintenance = { status = "actively-developed" }
